tried to make header always fixed, z-index:10000, and videos always z-index:-1

--- a/splashpage.css
+++ b/splashpage.css
@@ -17,7 +17,8 @@ html, body{
 #title{color:white;}
 
 #header{
-    position:absolute;
+    position:fixed;
+
     display:table;
     /*background-color:skyblue; /*bolder color*/
     background-color:#49B53E;/*#269926;/*#FF9640skyblue;*/
@@ -27,6 +28,8 @@ html, body{
     left:.5%;
     border-radius:0px 0px 2em 2em;
     text-align: center;
+
+    z-index:10000;
 }
 
 #title{
@@ -797,7 +800,7 @@ html.CS_page{
 
 html.CS_page #header{
     position:fixed;
-    z-index:1;
+    z-index:100000;
     /*to get rid of top space*/
     /*margin-top:-.5em;*/
 }
@@ -1053,4 +1056,5 @@ height:8.5em;
     right: 10%;
 }
 
-
+video{
+z-index=-1;}
